// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsTotalCountComponent should render total items count when it equals 0 1`] = `
<app-search-results-total-count
  totalCount="0"
>
  <h5>
    
    
    No photos
    
    
     found
  </h5>
  
</app-search-results-total-count>
`;

exports[`SearchResultsTotalCountComponent should render total items count when it equals 1 1`] = `
<app-search-results-total-count
  totalCount={[Function Number]}
>
  <h5>
    
    
    
    1 photo
    
     found
  </h5>
  
</app-search-results-total-count>
`;

exports[`SearchResultsTotalCountComponent should render total items count when it is greater than 1 1`] = `
<app-search-results-total-count
  totalCount={[Function Number]}
>
  <h5>
    
    
    
    
    10 photos
     found
  </h5>
  
</app-search-results-total-count>
`;
